--- a/frontend/components/Header/Header.module.scss
+++ b/frontend/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  background-color: #fff4e2 !important;
+  background-color: #e2ffe7 !important;
   padding: 0 35px 0 10px;
   height: 60px;
   margin-bottom: 14px;
@@ -60,5 +60,22 @@
       border-color: darken(#fff4e2, 15%);
       box-shadow: 0 0 0 3px rgb(229 160 64 / 12%);
     }
+  }
+}
+
+.loginButton {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 500;
+  margin-left: 15px;
+
+  svg {
+    margin-right: 10px;
+  }
+
+  &:hover {
+    color: #29b241;
   }
 }
