--- a/frontend/components/Header/Header.module.scss
+++ b/frontend/components/Header/Header.module.scss
@@ -4,11 +4,17 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  background-color: #e2f2ff !important;
+  background-color: #e2f0ff !important;
   padding: 0 35px 0 10px;
   height: 60px;
   margin-bottom: 14px;
   z-index: 1;
+}
+
+.searchBlockPopup {
+  position: absolute !important;
+  top: 40px;
+  width: 310px;
 }
 
 .logo {
