--- a/frontend/components/Header/Header.module.scss
+++ b/frontend/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  background-color: #e2f0ff !important;
+  background-color: #fff5c4 !important;
   padding: 0 35px 0 10px;
   height: 60px;
   margin-bottom: 14px;
